[package]
name = "mdread-donot-use-test-only"
version = "0.1.0"
authors = ["Sagar Sahu <sagarsahu27@hotmail.com>"]
edition = "2018"
license = "MIT"
keyword = ["Parse", "markdown"]
repository = "https://github.com/sagarsahu27/rust-learning/mdread"
description = "Read a markdown file and return a parsed html file"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.1"
pulldown-cmark = "0.7.2"
maud = "0.22"